fix wrong position segments

--- a/src/partials/Hud/Hud.css
+++ b/src/partials/Hud/Hud.css
@@ -52,6 +52,4 @@
   top: 47.5%;
 }
 
-.maxTemp {
-  top: 21.5%;
-}
+.maxTemp { top: 21.5%;  }
